hphp/test/zend/good/ext-spl/bug48023.php
<?php
spl_autoload_register(function(){});

new Foo;

?>
===DONE===